...
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="number"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/updateHeartRate"
            tools:ignore="MissingPrefix" />

<!--        <TextView-->
<!--            android:layout_marginLeft="3dp"-->
<!--            fontPath="fonts/nunito_light.ttf"-->
<!--            android:layout_width="wrap_content"-->
...
            android:id="@+id/updateComment"
            tools:ignore="MissingPrefix" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateRecord"
            android:text="Update Record"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:layout_marginTop="40dp" />

    </LinearLayout>
...
